--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             </div>
             <div class="place-container">
                 <div class="time-zone" id="time-zone">San Anonio/Texas</div>
-                <div id="country" class="country"></div>
+                <div id="country" class="country">USA</div>
             </div>
         </div>
     </div>
